Vectorial DCT and IDCT implementation using map reduce framework

--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -8,11 +8,11 @@ keys=consoleHandler
 keys=consoleFormatter
 
 [logger_root]
-level=DEBUG
+level=WARN
 handlers=consoleHandler
 
 [logger_MainLogger]
-level=DEBUG
+level=WARN
 handlers=consoleHandler
 qualname=MainLogger
 propagate=0
