Primeras predicciones con LDA y KNN k=3 sklearn

--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -8,11 +8,11 @@ keys=consoleHandler
 keys=consoleFormatter
 
 [logger_root]
-level=WARN
+level=INFO
 handlers=consoleHandler
 
 [logger_MainLogger]
-level=WARN
+level=INFO
 handlers=consoleHandler
 qualname=MainLogger
 propagate=0
