exluding new locations

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 # spyder and python local directories
 .spyproject/
 __pycache__/
+.pytest_cache/
+.vagrant/
+
+.idea/
 
 # exclude everything
 log/*
 output/*
+
+# exclude resources for now
+resources/
