changes and adding more class models
Implementing new SampEn and higuchi's as well

--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -8,11 +8,11 @@ keys=consoleHandler
 keys=consoleFormatter
 
 [logger_root]
-level=INFO
+level=DEBUG
 handlers=consoleHandler
 
 [logger_MainLogger]
-level=INFO
+level=DEBUG
 handlers=consoleHandler
 qualname=MainLogger
 propagate=0
@@ -24,4 +24,4 @@ formatter=consoleFormatter
 args=(sys.stdout,)
 
 [formatter_consoleFormatter]
-format=%(asctime)s | %(levelname)-8s | %(filename)s-%(funcName)s-%(lineno)04d | %(message)s
+format=%(asctime)s - %(threadName)s - %(name)s - %(levelname)s - %(message)s
