--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -8,18 +8,18 @@ keys=consoleHandler
 keys=consoleFormatter
 
 [logger_root]
-level=DEBUG
+level=WARN
 handlers=consoleHandler
 
 [logger_MainLogger]
-level=DEBUG
+level=WARN
 handlers=consoleHandler
 qualname=MainLogger
 propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=WARN
 formatter=consoleFormatter
 args=(sys.stdout,)
 
