conda environment configuration with docker

--- a/resources/envs/Dockerfile
+++ b/resources/envs/Dockerfile
@@ -2,29 +2,20 @@ FROM continuumio/miniconda:latest
 
 WORKDIR /home/elekin
 
-COPY environment.yml ./
-COPY api.py ./
+COPY resources/envs/environment.yml ./
 COPY boot.sh ./
 
 RUN chmod +x boot.sh
-RUN conda env create  -f resources\envs\environment.yml && conda update --all
-
-RUN bash -c 'conda activate elekin'
-
-RUN mkdir -p ~/.jupyter && echo c.NotebookApp.ip = \'0.0.0.0\' > ~/.jupyter/jupyter_notebook_config.py
-
-EXPOSE 8888 8888
-
-#CMD ["/home/elekin/pyrestfmri/preprocess.py","-c","/home/elekin/pyrestfmri/conf/config_test.json"]
-
-CMD jupyter-notebook
-
+RUN conda env create  -f environment.yml && conda update --all
 
 RUN conda env create -f environment.yml
+RUN conda activate elekin
 
-RUN echo "source activate your-environment-name" > ~/.bashrc
-ENV PATH /opt/conda/envs/your-environment-name/bin:$PATH
+RUN mkdir -p ~/.jupyter && echo c.NotebookApp.ip = \'0.0.0.0\' > ~/.jupyter/jupyter_notebook_config.py
+#CMD ["/home/elekin/pyrestfmri/preprocess.py","-c","/home/elekin/pyrestfmri/conf/config_test.json"]
+CMD jupyter-notebook
 
 EXPOSE 5000
+EXPOSE 8888 8888
 
 ENTRYPOINT ["./boot.sh"]
