--- a/conf/sacred_config.json
+++ b/conf/sacred_config.json
@@ -1,5 +1,14 @@
 {
     "coefficients": 17,
-    "data_dir": "/data/elekin/data/results/handwriting/"
+    "data_dir": "/data/elekin/data/results/handwriting/",
+    "ct_root_path": "/data/elekin/data/origin/ethw/Controles30jun14/",
+    "et_root_path": "/data/elekin/data/origin/ethw/protocolo_temblor",
+    "file_list_path" : "/data/elekin/data/origin/ethw/ETONA.txt",
+
+    "labels": "labels",
+
+    
+    "MONGO_INITDB_ROOT_USERNAME": "mongo_user",
+    "MONGO_INITDB_ROOT_PASSWORD": "mongo_password"
 
 }
