--- a/resources/docker/docker-compose.yml
+++ b/resources/docker/docker-compose.yml
@@ -6,13 +6,18 @@ services:
     image: deep-learning-workstation:5000/spiral
     networks:
       - public
-    command: start-notebook.sh --NotebookApp.password=''sha1:283598bb9327:511f11f16e35d28ccf5569600f5ccf4c5dd86f6d
+    command: jupyter notebook --allow-root --ip=0.0.0.0
     ports:
       - "8888:8888"
       - "8887:8080"
     volumes:
       - /data:/data
       - ../..:/home/jovyan/spiral
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [ gpu ]
 networks:
   public:
     external: true
