update spiral docker: adding dependencies

--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -1,5 +1,5 @@
 # Start from a core stack version
-FROM jupyter/base-notebook
+FROM tensorflow/tensorflow:latest-gpu-jupyter
 
 USER root
 
@@ -7,7 +7,7 @@ RUN apt update && apt install --yes git
 
 USER $NB_USER
 
-ADD ./envs/requirements.txt .
+ADD requirements.txt .
 RUN pip install -r requirements.txt
 
 WORKDIR /home/jovyan/spiral
