--- a/resources/docker/requirements.txt
+++ b/resources/docker/requirements.txt
@@ -1,3 +1,13 @@
-h5py
-seaborn
+pyyaml===5.4.1
+pandas
+seaborn==0.11.1
+tables==3.6.1
+sklearn
+skrebate==0.62
+mlflow==1.17.0
+git+https://github.com/tensorflow/docs
+sampen
+xlrd==1.2.0
+hfda
+pyentrp
 
