configuring docker environment with mlflow
Enable google cloud as artifact reporistory for mlflow

--- a/resources/docker/docker-compose.yml
+++ b/resources/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - /data:/data
       - ../..:/home/jovyan/spiral
+      - /data/resources/cloud/gcp/keys:/tmp/keys
     deploy:
       resources:
         reservations:
