--- a/resources/docker/docker-compose.yml
+++ b/resources/docker/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   spiral:
     build: .
     image: deep-learning-workstation:5000/spiral
-    networks:
-      - public
+    environment:
+      GOOGLE_APPLICATION_CREDENTIALS: "/tmp/keys/eastonlab-b37c04a8f1a5.json"
     command: jupyter notebook --allow-root --ip=0.0.0.0
     ports:
       - "8888:8888"
@@ -14,6 +14,8 @@ services:
       - /data:/data
       - ../..:/home/jovyan/spiral
       - /data/resources/cloud/gcp/keys:/tmp/keys
+    networks:
+      - public
     deploy:
       resources:
         reservations:
