--- a/resources/docker/docker-compose.yml
+++ b/resources/docker/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     image: deep-learning-workstation:5000/spiral
     environment:
       GOOGLE_APPLICATION_CREDENTIALS: "/tmp/keys/eastonlab-b37c04a8f1a5.json"
+      MLFLOW_TRACKING_URI: "http://192.168.1.12:5001"
     command: jupyter notebook --allow-root --ip=0.0.0.0
     ports:
       - "8888:8888"
