--- a/resources/docker/docker-compose.yml
+++ b/resources/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   spiral:
     build: .
-    image: deep-learning-workstation:5000/spiral
+    image: deep-learning-workstation:5000/spiral-jupyter
     environment:
       GOOGLE_APPLICATION_CREDENTIALS: "/tmp/keys/eastonlab-b37c04a8f1a5.json"
       MLFLOW_TRACKING_URI: "http://192.168.1.12:5001"
