--- a/resources/docker/docker-compose.yml
+++ b/resources/docker/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "8888:8888"
       - "8887:8080"
     volumes:
-      - /data:/data 
+      - '/media/spolex/Seagate Expansion Drive/:/data'
       - ../..:/home/jovyan/spiral
 networks:
   public:
