--- a/resources/docker/requirements.txt
+++ b/resources/docker/requirements.txt
@@ -4,11 +4,12 @@ seaborn==0.11.1
 tables==3.6.1
 sklearn
 skrebate==0.62
-git+https://github.com/tensorflow/docs
+#git+https://github.com/tensorflow/docs
 sampen
 xlrd==1.2.0
 hfda
 pyentrp
 mlflow==1.20.2
 google-cloud-storage
-
+openpyxl
+urlib
