--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ notebooks/ethw.*
 notebooks/logs/
 notebooks/tensorflow_log/
 resources/mlflow/cuda_11.2.2_460.32.03_linux.run
+
+
+resources/mlflow/lstm/output.log
